--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -36,12 +36,13 @@ background-color: #FFFFFF !important;
 
 .img-top {
   position: relative;
-  top: 35px;
+  top: 50px;
 }
 
 .img-center {
   position: relative;
   bottom: 30px;
+  top: 15px;
 }
 
 .img-group {
@@ -51,7 +52,7 @@ background-color: #FFFFFF !important;
 
 .img-bottom {
   position: relative;
-  bottom: 35px;
+  bottom: 3px;
 }
 
 .city {
@@ -104,4 +105,10 @@ background-color: #FFFFFF !important;
 .badge
 {
   background-color: #5bc0de;
+}
+
+.img-and-after {
+  position: relative;
+  top: 5px;
+  left: 0px;
 }
