--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,10 +1,16 @@
-<div class="jumbotron jumbotron-fluid" style="background-image: url(https://images.pexels.com/photos/19670/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940); background-size: 100%;">
-  <div class="container">
-    <h1 class="display-4">Les propositions citoyennes à <%= @city.name %></h1>
-    <p class="lead">Retrouvez les meilleurs propositions du moment ci-dessous</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-7 city">
+      <h1 class="display-4">Les propositions citoyennes à <%=@city.name%></h1>
+      <p class="lead">Retrouvez les meilleures propositions du moment ci-dessous</p>
+    </div>
+    <div class="col-md-5 city">
+     <%= image_tag("city.svg", style: "width:100%") %>
+    </div>
   </div>
 </div>
-
+<br>
+<br>
 <div id="filter" class="container">
   <div class="row">
     <div class="col-xs col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
