mails content modified

--- a/app/views/proposal_mailer/confirmation_proposal.text.erb
+++ b/app/views/proposal_mailer/confirmation_proposal.text.erb
@@ -1,7 +1,7 @@
 Salut <%= @user.first_name %> !
 ==========================================================
  
-Cet email t'informe que ta proposition a été acceptée par nos équipes. Tu peux désormais te rendre sur <%= @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
+Cet email t'informe que ta proposition a été acceptée par nos équipes. Tu peux désormais te rendre sur <%= link_to "Agora.com", @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
 
 À très vite sur Agora !
 
