--- a/app/views/proposal_mailer/info_user.html.erb
+++ b/app/views/proposal_mailer/info_user.html.erb
@@ -9,7 +9,7 @@
 <p> Avant de montrer ta proposition au monde entier nous devons vérifier quelle corresponde à notre chartre.</p>
 <p> Nous reviendrons vers toi très vite pour te notifier de son acceptation ou non.
  <p>
-      Pour accéder à compte, connecte-toi via : <%= @url %>.
+      Pour accéder à ton compte, connecte-toi via : <%= link_to "Agora.com", @url %>
     </p>
     <p> À très vite sur Agora !</p>
   </body>
