--- a/app/views/proposal_mailer/info_user.text.erb
+++ b/app/views/proposal_mailer/info_user.text.erb
@@ -5,6 +5,6 @@ Avant de montrer ta proposition au monde entier nous devons vérifier quelle cor
 
 Nous reviendrons vers toi très vite pour te notifier de son acceptation ou non.
  
-Pour accéder à ton espace client, connecte-toi via : <%= @url %>.
+Pour accéder à ton compte, connecte-toi via : <%= link_to "Agora.com", @url %>
  
 À très vite sur Agora !
