--- a/app/views/proposal_mailer/send_email_after_votes.text.erb
+++ b/app/views/proposal_mailer/send_email_after_votes.text.erb
@@ -2,12 +2,37 @@ Mise en relation avec les utilisateur ayant votés pour votre proposition
 
 ========================================================
 
-                                    Salut <%= @user.first_name %> !
+                             Salut <%= @user.first_name %> !
 
-Cet email t'informe que ta proposition a été validée par la communauté. Tu peux désormais contacter les citoyens ayant votés pour ta proposition pour t'organiser avec eux.
-Voici les votants :
- <% @votes.each do |vote|%>
- <%= vote.user.email%> 
+
+Cet email t'informe que ta proposition a été validée par la communauté. Tu peux désormais te rendre sur <%= link_to "Agora.com", @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
+ 
+Voici des liens utiles qui t'aideront à mettre en place ton projet :
+       
+  <%= link_to "- Comment mettre en place une démocratie participative", @url1 %> 
+ 
+  <%= link_to "- Les démarches de participation citoyenne", @url2 %> 
+     
+  <%= link_to "- Monter un projet", @url3 %> 
+ 
+  <%= link_to "- Qu'est-ce qu'un projet citoyen?", @url4 %> 
+  
+  <%= link_to "- Budget participatif", @url4 %> 
+    
+  <%= link_to "- Modalités de participation des citoyens aux décisions locales", @url5 %> 
+       
+  <%= link_to "- Exemple de dossier à monter", @url6 %> 
+    
+
+Tu peux désormais contacter les citoyens ayant votés pour ta proposition pour t'organiser avec eux. 
+     
+Voici les votants : 
+     
+<% @votes.each do |vote|%>
+  <%= vote.user.email%>
 <%end %>
+
+Encore bravo pour ta super idée et à très vite sur Agora !
+      
 
 L'équipe Agora.
