--- a/app/views/proposal_mailer/confirmation_proposal.html.erb
+++ b/app/views/proposal_mailer/confirmation_proposal.html.erb
@@ -5,15 +5,10 @@
   </head>
   <body>
     <h1>Salut <%= @user.first_name %> !</h1>
-   
-<p>Cet email t'informe que ta proposition a été acceptée par nos équipes. Tu peux désormais te rendre sur <%= @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
- </p>
- <p>
-     Encore bravo pour ta super idée et à très vite sur Agora !
-    </p>
-
-
-   <p> L'équipe Agora <p> 
-
+      <p>Cet email t'informe que ta proposition a été acceptée par nos équipes. Tu peux désormais te rendre sur <%= link_to "Agora.com", @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
+      </p>
+      <p>Encore bravo pour ta super idée et à très vite sur Agora !
+      </p>
+      <p> L'équipe Agora <p> 
   </body>
 </html>
