--- a/app/views/proposal_mailer/info_admin.html.erb
+++ b/app/views/proposal_mailer/info_admin.html.erb
@@ -6,29 +6,23 @@
   <body>
     <h1>Informations sur la proposition en instance de validation </h1>
     </p> Cette proposition a été postée par <%= @user.first_name %> <%= @user.last_name %> le <%= @proposal.created_at %></p>
-
-
-<p>ID : 
-<%= @proposal.id %> </p>
-
-<p>Titre :
-<%= @proposal.title %></p>
-
-<p>Description : 
-<%= @proposal.description %></p>
-
-<p>Objectif : 
-<%= @proposal.purpose %> </p>
-
-<p>Ville :
-<%= @city.name%> </p>
-
-<p>Catégorie :
-<%= @category.name %> </p>
- 
-    <p>
-     <%= @url %>
-    </p>
-   
+      <p>ID : 
+         <%= @proposal.id %> 
+      </p>
+      <p>Titre :
+         <%= @proposal.title %>
+      </p>
+      <p>Description : 
+         <%= @proposal.description %>
+      </p>
+      <p>Objectif : 
+         <%= @proposal.purpose %> 
+      </p>
+      <p>Ville :
+         <%= @city.name%> 
+      </p>
+      <p>Catégorie :
+         <%= @category.name %> 
+      </p>
   </body>
 </html>
