--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -9,7 +9,7 @@
       Tu t'es inscrit sur Agora en utilisant l'e-mail suivant : <%= @user.email %>.
     </p>
     <p>
-      Pour accéder à ton espace client, connecte-toi via : <%= @url %>.
+      Pour accéder à ton compte, connecte-toi sur <%= link_to "Agora.com", @url %>
     </p>
     <p> À très vite sur Agora !
   </body>
