--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -3,6 +3,6 @@ Salut <%= @user.first_name %> et bienvenue chez nous !
  
 Tu t'es inscrit sur Agora en utilisant l'e-mail suivant : <%= @user.email %>.
  
-Pour accéder à ton espace client, connecte-toi via : <%= @url %>.
+Pour accéder à ton compte, connecte-toi sur <%= link_to "Agora.com", @url %>
  
 À très vite sur Agora !
