--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,5 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Bonjour <%= @resource.email %>,</p>
+<p>Nous t'informons que ton mot de passe a été modifié.</p>
+<br>
+<p>L'équipe Agora</p>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
