--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Bonjour <%= @resource.email %>,</p>
+<p>Tu as fait une demande pour changer ton mot de passe. Vas sur le lien suivant pour le modifier : </p>
+<p><%= link_to 'Changer mon mot de passe', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p>Si tu ne veux pas changer de mot de passe, ignore ce message.</p>
+<p>Ton mot de passe ne changera pas tant que les modifications n'auront pas été sauvegardées sur ce lien.</p>
+<br>
+<p>L'équipe Agora</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
-
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
-
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
