--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,6 @@
-<p>Hello <%= @resource.email %>!</p>
-
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
-
-<p>Click the link below to unlock your account:</p>
-
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p>Salut <%= @resource.email %>!</p>
+<p>Ton compte a été bloqué suite à un nombre trop important d'échec de connexion.</p>
+<p>Clique sur le lien ci-dessous pour débloquer ton comtpe :</p>
+<p><%= link_to 'Débloquer mon compte', unlock_url(@resource, unlock_token: @token) %></p>
+<br>
+<p>L'équipe Agora</p>
