adjust style landing page

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -117,3 +117,9 @@ background-color: #FFFFFF !important;
   position: relative;
   top: 1px;
 }
+
+.img-profile {
+  position: relative;
+  bottom: 15px;
+  
+}
