--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -56,7 +56,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-1">
         <h2 class="featurette-heading">Agissez  <i class="material-icons group-icon" style="font-size: 33px">people</i></h2>
-        <p class="lead text-home">Sur Agora, le système de vote permet de faire ressortir les meilleures propositions. Quand l'idée a reçu assez de votes positifs, nos équipes vous accompagnent pour rendre vos projets possibles. </p>
+        <p class="lead text-home">Sur Agora, le système de vote permet de faire ressortir les meilleures propositions. Quand l'idée a reçu assez de votes positifs, nos équipes vous mettent en relation avec les citoyens soutenant votre projet. </p>
       </div>
       <div class="col-md-5 order-md-2 img-center">
         <%= image_tag("group.svg", style: "width:80%") %>
@@ -80,7 +80,7 @@
               
             </div>
             <div class="timeline-body">
-              <p>Le grand moment est arrivé ! Nous nous occupons de vous mettre en relation avec toux ceux qui ont soutenus votre projet.</p>
+              <p>Le grand moment est arrivé ! À partir de 100  votes positifs, votre proposition est validée et nous vous mettons en relation avec toux ceux qui ont soutenus votre projet.</p>
             </div>
           </div>
         </li>
@@ -144,7 +144,7 @@
             <h4 class="card-title">Julien Jacquet</h4>
             <h6 class="category">@jjacquet</h6>
             <div class="card-avatar">
-              <a href="#pablo">
+              <a href="">
                 <img src="https://images.unsplash.com/photo-1528763380143-65b3ac89a3ff?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=635&q=80" style="width: 100%;height: auto;">
               </a>
             </div>
@@ -159,7 +159,7 @@
           </div>
           <div class="card-content">
             <h5 class="card-description">
-              Agora c'est la démocratie 2.0 ! On peut échanger, débattre et agir entre citoyens pour améliorer sa ville. Le site est très agréable à prendre en main et l"équipe nous accompagne de A à Z !
+              Agora c'est la démocratie 2.0 ! On peut échanger, débattre et agir entre citoyens pour améliorer sa ville. Le site est très agréable à prendre en main et l'équipe est très réactive !
             </h5>
           </div>
           
@@ -167,8 +167,8 @@
             <h4 class="card-title">Alexis Bernard</h4>
             <h6 class="category">@alexisbernard</h6>
             <div class="card-avatar">
-              <a href="#pablo">
-                <img src="https://images.unsplash.com/photo-1512485694743-9c9538b4e6e0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" style="width: 100%;height: auto;">
+              <a href="">
+                <img src="https://images.unsplash.com/photo-1512485694743-9c9538b4e6e0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" style="width: 100%;height: auto;" class="img-profile">
               </a>
             </div>
           </div>
@@ -189,8 +189,8 @@
             <h4 class="card-title">Marie Brun</h4>
             <h6 class="category">@mariebrun</h6>
             <div class="card-avatar">
-              <a href="#pablo">
-                <img src="https://images.unsplash.com/photo-1570840934347-4dc56c98b8ef?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" style="width: 100%;height: auto;">
+              <a href="">
+                <img src="https://images.unsplash.com/photo-1570840934347-4dc56c98b8ef?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" style="width: 100%;height: auto;" class="img-profile">
               </a>
             </div>
           </div>
