--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,7 +16,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="material-icons">home</i> Villes disponibles <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <% City.all.each do |city|%>
-              <li><%= link_to city.name, city_path(city.id) %></li>
+              <li><%= link_to city.name, ma_ville_path %></li>
             <%end%> 
           </ul>
         </li>
@@ -29,7 +29,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bienvenue <%= current_user.first_name%> <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><%= link_to 'Mon profil <i class="material-icons" style="font-size: 19px">person</i>'.html_safe, user_path(current_user.id), :class => "dropdown-item" %> </li> 
+              <li><%= link_to 'Mon profil <i class="material-icons" style="font-size: 19px">person</i>'.html_safe, mon_profil_path, :class => "dropdown-item" %> </li> 
               <li> <%= link_to 'Se déconnecter <i class="material-icons" style="font-size: 19px">person_remove</i>'.html_safe, destroy_user_session_path, :class => "dropdown-item", method: :delete %></li>
             </ul>
           </li>
