--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,10 +14,10 @@
         <h4 class="card-title"><%= @user.first_name %> <%= @user.last_name %></h4>
         <br>
         <p class="text"><%= @user.email %></p>
-        <%= link_to "#{@user.city.name}", city_path(@user.city), class: 'btn btn-primary btn-round btn-xs' %>
+        <%= link_to "#{@user.city.name}", ma_ville_path, class: 'btn btn-primary btn-round btn-xs' %>
         <br>
         <div class="p-1 mb-1">
-          <%= link_to 'Éditer mon profil &nbsp <i class="material-icons" style="font-size: 19px">create</i>'.html_safe , edit_user_path(@user), class: "btn btn-primary" %>
+          <%= link_to 'Éditer mon profil &nbsp <i class="material-icons" style="font-size: 19px">create</i>'.html_safe , editer_path, class: "btn btn-primary" %>
           <%= link_to 'Paramètres &nbsp <i class="material-icons" style="font-size: 19px">settings</i>'.html_safe, edit_user_registration_path, class: "btn btn-primary" %> 
         </div>
       </div>
