--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -76,7 +76,7 @@
               <table class="table table-responsive table-full-width">
                 <tbody>
                   <% @proposals.each do |x| %>
-                    <%if (x.differencebetween == false)%>
+                    <%if (x.differencebetween == false) && x.votes_count < 1%>
                       <tr>
                         <td></td>
                         <td>
@@ -132,7 +132,7 @@
         <h3> Pas de proposition terminée à <%= @city.name %> pour le moment. </h3>
       </div>
     <%else%>
-      <h3>Les propositions passées :</h3>
+      <h3>Les propositions terminées :</h3>
       <div class="row">
         <div class="col">
           <div class="card">
@@ -140,7 +140,7 @@
               <table class="table table-responsive table-full-width">
                 <tbody>
                   <% @proposals.each do |x| %>
-                    <%if (x.differencebetween == true) %>
+                    <%if (x.differencebetween == true) ||  x.votes_count >= 1%>
                     <tr>
                       <td></td>
                       <td>
@@ -160,7 +160,17 @@
                         </a>
                         <span class="badge badge-primary"><%= x.category.name %></span>
                       </td>
-                      <td><td>
+                      <td>
+                        <%if (x.differencebetween == true) %>
+                          <div class="alert alert-warning">
+                            <p class="text-center">Expirée</p>
+                          </div>      
+                        <%elsif x.votes_count >= 1%> 
+                          <div class="alert alert-info">
+                            <p class="text-center">Validée</p>
+                          </div>
+                        <%end%>
+                      <td>
                     </tr>
                     <%else%>
                     <%end%>
