--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -65,7 +65,7 @@
         <div class="card">
           <div class="card-content text-center">
             <% unless is_current_user_owner_of?(@proposal) %>
-              <%if (@proposal.differencebetween == false) && @proposal.votes_count < 100 %>
+              <%if (@proposal.differencebetween == false) && @proposal.votes_count < 1 %>
                 <% t = (Time.now- (@proposal.created_at+(60*60*24*30)))%>
                 <p class='text-muted'> Il reste : <%= ((t.to_i)/(60*60*24)).abs %> jours pour voter</p>
                 <h5 class="text-muted">Votez pour cette proposition</h5>
@@ -76,12 +76,12 @@
                 <%end%>
               <%else%>
                 <%if (@proposal.differencebetween == true) %>
-                  <div class="alert alert-default">
-                    <p>Le temps limite de vote est dépassé :(</p>
-                  </div>      
+                  <div class="alert alert-warning">
+                    <p class="text-center">Expirée</p>
+                  </div>    
                 <%else%> 
-                  <div class="alert alert-default">
-                    <p>Le nombre de votes maximal est atteint !</p>
+                  <div class="alert alert-info">
+                    <p class="text-center">Validée</p>
                   </div>
                 <%end%>
               <%end%>
