--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -49,11 +49,11 @@
 <% @numthen = 0 %>
 <% @numvotes = 0 %>
 <% @proposals.each do |x| %>
-  <%if (x.differencebetween == false) %>
-    <% @numnow += 1 %>
-  <%elsif x.votes_count >= 1%>
+  <%if (x.votes_count >= 5)%>
     <% @numvotes += 1 %>
-  <%elsif%>
+  <%elsif (x.differencebetween == false) %>
+    <% @numnow += 1 %>
+  <%else%>
     <% @numthen += 1 %>
   <%end%>
 <%end%>
@@ -79,7 +79,7 @@
               <table class="table table-responsive table-full-width">
                 <tbody>
                   <% @proposals.each do |x| %>
-                    <%if (x.differencebetween == false) && x.votes_count < 1%>
+                    <%if (x.differencebetween == false) && x.votes_count < 5%>
                       <tr>
                         <td></td>
                         <td>
@@ -130,9 +130,10 @@
   </div>
 
   <div class="container">
-    <% if @numthen == 0 && @numvotes == 0 %>
+    <% if (@numthen == 0) && (@numvotes == 0) %>
       <div class='no-proposal'>
         <h3><b>Pas de proposition terminée à <%= @city.name %> pour le moment. </b></h3>
+        <br><br>
       </div>
     <%else%>
       <h3><b>Les propositions terminées :</b></h3>
@@ -143,7 +144,7 @@
               <table class="table table-responsive table-full-width">
                 <tbody>
                   <% @proposals.each do |x| %>
-                    <%if (x.differencebetween == true) ||  x.votes_count >= 1%>
+                    <%if (x.differencebetween == true) ||  x.votes_count >= 5%>
                     <tr>
                       <td></td>
                       <td>
@@ -169,11 +170,11 @@
                             <p class="text-center">Expirée</p>
                           </div>   
                           <p class="text-muted text-center">Cette proposition a atteint la date d'expiration</p>    
-                        <%elsif x.votes_count >= 1%> 
+                        <%elsif x.votes_count >= 5%> 
                           <div class="alert alert-info">
                             <p class="text-center">Validée</p>
                           </div>
-                          <p class="text-muted text-center">Cette proposition a atteint les 100 votes!</p> 
+                          <p class="text-muted text-center">Cette proposition a atteint les 5 votes!</p> 
                         <%end%>
                       <td>
                     </tr>
