--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -9,8 +9,7 @@
     </div>
   </div>
 </div>
-<br>
-<br>
+<br><br><br><br><br>
 <div id="filter" class="container">
   <div class="row">
     <div class="col-xs col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
@@ -20,7 +19,7 @@
         </div>
         <div class="card-content">
           <div class="row">
-            <h6 class='text-muted'>Filtre de propositions</h6>
+            <h6 class='text-muted'>Filtrez les propositions qui vous intéressent</h6>
             <div class="col-xs col-sm-6">
               <select id="categories" class="selectpicker" data-style="select-with-transition" multiple title="Choisissez une catégorie" data-size="7">
                 <% @categories.each do |category| %>
@@ -58,6 +57,7 @@
   <%end%>
 <%end%>
 
+<br><br>
 <div id=<%= @city.id %> class="my-city">
   <div class="container">
     <% if @proposals.count == 0 %>
