--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -144,9 +144,7 @@
             <h4 class="card-title">Julien Jacquet</h4>
             <h6 class="category">@jjacquet</h6>
             <div class="card-avatar">
-              <a href="">
-                <img src="https://images.unsplash.com/photo-1528763380143-65b3ac89a3ff?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=635&q=80" style="width: 100%;height: auto;">
-              </a>
+              <%= image_tag("julien.jpg", style: "width: 100%;height: auto") %>
             </div>
           </div>
         </div>
@@ -167,9 +165,7 @@
             <h4 class="card-title">Alexis Bernard</h4>
             <h6 class="category">@alexisbernard</h6>
             <div class="card-avatar">
-              <a href="">
-                <img src="https://images.unsplash.com/photo-1512485694743-9c9538b4e6e0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" style="width: 100%;height: auto;" class="img-profile">
-              </a>
+              <%= image_tag("alexis.jpg", style: "width: 100%;height: auto") %>
             </div>
           </div>
         </div>
@@ -188,10 +184,8 @@
           <div class="footer">
             <h4 class="card-title">Marie Brun</h4>
             <h6 class="category">@mariebrun</h6>
-            <div class="card-avatar">
-              <a href="">
-                <img src="https://images.unsplash.com/photo-1570840934347-4dc56c98b8ef?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" style="width: 100%;height: auto;" class="img-profile">
-              </a>
+            <div class="card-avatar">            
+              <%= image_tag("marie.jpg", style: "width: 100%;height: auto") %>
             </div>
           </div>
         </div>
