change mailer view

--- a/app/views/proposal_mailer/send_email_after_votes.html.erb
+++ b/app/views/proposal_mailer/send_email_after_votes.html.erb
@@ -28,11 +28,9 @@
       <p>
         Tu peux désormais contacter les citoyens ayant votés pour ta proposition pour t'organiser avec eux. 
       <br>
-        Voici les votants : 
+        Nous t'envoyons en pièce jointe la liste des citoyens ayant soutenus ta proposition. N'hésite pas à prendre contact avec eux rapidement !
       </p>
-        <% @votes.each do |vote|%>
-          <p> <%= vote.user.email%> <p>
-        <%end %>
+       
     <br>
       <p>
         Encore bravo pour ta super idée et à très vite sur Agora !
