--- a/app/views/proposal_mailer/send_email_after_votes.text.erb
+++ b/app/views/proposal_mailer/send_email_after_votes.text.erb
@@ -24,13 +24,7 @@ Voici des liens utiles qui t'aideront à mettre en place ton projet :
   <%= link_to "- Exemple de dossier à monter", @url6 %> 
     
 
-Tu peux désormais contacter les citoyens ayant votés pour ta proposition pour t'organiser avec eux. 
-     
-Voici les votants : 
-     
-<% @votes.each do |vote|%>
-  <%= vote.user.email%>
-<%end %>
+ Nous t'envoyons en pièce jointe la liste des citoyens ayant soutenus ta proposition. N'hésite pas à prendre contact avec eux rapidement !
 
 Encore bravo pour ta super idée et à très vite sur Agora !
       
