--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer-down mt-5 pt-5 pb-3">
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-4">
         <h2 class="text-white-footer">Agora</h2>
         <p class="pr-5 text-white-footer">Vous aussi, concrétisez votre projet !</p>
         <br>
@@ -12,7 +12,7 @@
           <a href="https://mail.google.com" class="text-primary"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-4">
         <h4 class=" mt-sm-3 text-white-footer">Nous connaître</h4>
         <p><a href="/contact" class="text-white-footer">À propos</a></p>
         <p><a href="#" class="text-white-footer">Mentions légales </a></p>
@@ -20,7 +20,7 @@
         <p><a href="#" class="text-white-footer">Politique de confidentialité</a></p>
         <p><a href="#" class="text-white-footer">FAQ</a></p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-4">
         <h4 class="mt-lg-0 mt-sm-4 text-white-footer">Contact</h4>
         <br>
         <p class="text-white-footer">22 rue des lauriers, 33000 Bordeaux</p>
