--- a/app/views/proposals/_debate.html.erb
+++ b/app/views/proposals/_debate.html.erb
@@ -13,7 +13,7 @@
   <br>
   <div class="row">
     <div class="col">
-      <table class="table table-responsive">
+      <table class="table table-responsive text-wrap">
         <tbody>
           <% @comments.each do |x| %>
             <tr>
