--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -11,22 +11,16 @@
       <p><a class="btn btn-primary btn-lg" href="/users/sign_in" role="button">Je veux créer ma proposition</a></p>
       <%end%>
     </div>
-    
     <div class="col-md-6 order-md-2 img-top">
       <%= image_tag("share.svg", style: "width:100%") %>
     </div>
   </div>
-  
 </div>
-
-<br>
-<br>
-<br>
+<br><br><br>
 <div class="container">
   <h2 class="text-center"><b>Comment ça marche ?</b></h2>
   <br>
   <br>
-  
   <div class="row featurette">
     <div class="col-md-7 order-md-1">
       <h2 class="featurette-heading">Proposez <i class="material-icons idea-icon" style="font-size: 33px">wb_incandescent</i></h2>
@@ -35,9 +29,6 @@
     <div class="col-md-5 order-md-1 img-center">
       <%= image_tag("idea.svg", style: "width:75%;") %>
     </div>
-    
-    
-
   </div>
   <div class="row featurette">
     <div class="col-md-5 col-lg-7 col-lg-push-5  ">
@@ -45,12 +36,9 @@
         <p class="lead text-home">Chaque jour des citoyens comme vous réfléchissent à comment améliorer le quotidien de votre ville. Consultez et débattez des propositions ensemble!</p>
     </div>
     <div class="col-md-7 col-lg-5 col-lg-pull-7 img-center">
-          <%= image_tag("voting.svg", style: "width:75%") %>
-      </div>
-      
+        <%= image_tag("voting.svg", style: "width:75%") %>
     </div>
-    
-    
+  </div>
     <br>
     <br>
     <div class="row featurette">
@@ -65,17 +53,13 @@
   </div>
   <br><br><br><br>
   <h2 class="text-center"><b>Et après ?</b></h2>
-
 <div class="container">
-    
-  
     <ul class="timeline">
         <li>
           <div class="timeline-badge primary"><i class="material-icons group-icon img-and-after">people</i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4 class="timeline-title">Rassemblez-vous !</h4>
-              
+              <h4 class="timeline-title">Rassemblez-vous !</h4>             
             </div>
             <div class="timeline-body">
               <p>Le grand moment est arrivé ! À partir de 100 votes positifs, votre proposition est validée et nous vous mettons en relation avec toux ceux qui ont soutenus votre projet.</p>
@@ -89,8 +73,7 @@
               <h4 class="timeline-title">Créez votre association</h4>
             </div>
             <div class="timeline-body">
-              <p>Selon la taille de votre projet, vous aurez besoin de créer une association à but non-lucrative.</p>
-             
+              <p>Selon la taille de votre projet, vous aurez besoin de créer une association à but non-lucrative.</p>            
             </div>
           </div>
         </li>
@@ -105,7 +88,6 @@
             </div>
           </div>
         </li>
-      
         <li class="timeline-inverted">
           <div class="timeline-badge primary"><i class="material-icons group-icon img-and-after">grade</i></div>
           <div class="timeline-panel">
@@ -114,16 +96,13 @@
             </div>
             <div class="timeline-body">
               <p>Votre idée a amélioré le quotidien de vos concitoyens et rendu votre ville encore plus belle. Bravo ! </p>
-             
             </div>
           </div>
         </li>
-       
     </ul>
 </div>
 <br><br>
 <h2 class="text-center"><b>Ils parlent de nous</b></h2>
-  
 <div class="container">
   <div class="row">
     <div class="col-md-4">
@@ -136,19 +115,15 @@
             Ce site est tout simplement génial ! Grâce à lui j'ai pu proposer mon idée et j'ai rencontré des citoyens soucieux de changer les choses. Encore merci à toute l'équipe d'Agora !
           </h5>
         </div>
-        
         <div class="footer">
           <h4 class="card-title">Julien Jacquet</h4>
           <h6 class="category">@jjacquet</h6>
           <div class="card-avatar">
-            <a href="">
-              <img src="https://images.unsplash.com/photo-1528763380143-65b3ac89a3ff?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=635&q=80" style="width: 100%;height: auto;">
-            </a>
+             <%= image_tag("julien.jpg", style: "width: 100%;height: auto") %>
           </div>
         </div>
       </div>
     </div> 
-    
     <div class="col-md-4"> 
       <div class="card card-testimonial box">
         <div class="icon">
@@ -159,16 +134,12 @@
             Agora c'est la démocratie 2.0 ! On peut échanger, débattre et agir entre citoyens pour améliorer sa ville. Le site est très agréable à prendre en main et l'équipe est très réactive !
           </h5>
         </div>
-        
         <div class="footer">
           <h4 class="card-title">Alexis Bernard</h4>
           <h6 class="category">@alexisbernard</h6>
           <div class="card-avatar">
-            <a href="">
-              <img src="https://images.unsplash.com/photo-1512485694743-9c9538b4e6e0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" style="width: 100%;height: auto;" class="img-profile">
-            </a>
+            <%= image_tag("alexis.jpg", style: "width: 100%;height: auto") %>
           </div>
-<<<<<<< HEAD
         </div>
       </div>
     </div>
@@ -181,33 +152,20 @@
           <h5 class="card-description">
             Avec Agora j'ai trouvé des citoyens motivés prêt à m'aider à réaliser mon projet ! J'ai pû débattre et agir avec eux pour améliorer ma ville. Merci Agora pour votre aide !
           </h5>
-        </div>
-        
-        <div class="footer">
-          <h4 class="card-title">Marie Brun</h4>
-          <h6 class="category">@mariebrun</h6>
-          <div class="card-avatar">
-            <a href="">
-              <img src="https://images.unsplash.com/photo-1570840934347-4dc56c98b8ef?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" style="width: 100%;height: auto;" class="img-profile">
-            </a>
-=======
-          
+        </div>         
           <div class="footer">
             <h4 class="card-title">Marie Brun</h4>
             <h6 class="category">@mariebrun</h6>
             <div class="card-avatar">            
               <%= image_tag("marie.jpg", style: "width: 100%;height: auto") %>
             </div>
->>>>>>> master
           </div>
         </div>
       </div>
     </div>
   </div>  
 </div>
-  
 <br><br><br><br><br><br><br>
- 
 <div class="container">
   <div class="row">
     <div class="col-md-7">
@@ -224,7 +182,6 @@
     </div>
   </div>
 </div>
-  
   <br><br><br>
   <br>
   <div class = "container">
@@ -298,9 +255,7 @@
       </div>
     </div>
   </div>
-  
   <br><br><br><br>
-  
   <div class="container">
     <div class="row">
       <div class="col-md-6">
@@ -322,9 +277,7 @@
       </div>
     </div>
   </div>
-  
   <br><br><br><br>
-  
   <div class = "container text-center">
     <h4 class="display-4 text-white"><b>Votre ville n'est pas encore disponible ? Dites-nous d'où vous venez !</b></h4>
     <p><a class="btn btn-primary " href="mailto: zeagoraproject@gmail.com" role="button"><i class="material-icons">mail</i>   Nous contacter</a></p>
