--- a/app/views/additional_views/contact.html.erb
+++ b/app/views/additional_views/contact.html.erb
@@ -8,13 +8,12 @@
     <div class="row justify-content-center">
       <div class="col-md-1 col-sm-1"></div>
       <div class="col-md-6 col-sm-6">
-      <br>
-        <p>Agora est une plate-forme citoyenne vous permettant de proposer et de partager des initiatives locales, dans le but d'améliorer le quotidien de tous !
+        <h5>Agora est une plate-forme citoyenne vous permettant de proposer et de partager des initiatives locales, dans le but d'améliorer le quotidien de tous !
           De manière simple et claire, vous devenez un véritable acteur dans la vie de votre ville.
-        </p>
-        <p>Cette idée qui est née du désir de vouloir faire bouger les choses, vite, et tout cela de façon inclusive.
+        </h5>
+        <h5>Cette idée qui est née du désir de vouloir faire bouger les choses, vite, et tout cela de façon inclusive.
           Nous croyons en l'humain et c'est ensemble que nous irons plus loin.
-        </p>
+        </h5>
       </div>
       <div class="col-md-4 col-sm-4">
         <%= image_tag("team.svg", style: "width:250px")%>
